--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="..\src\style.css">
 </head>
+<header>
+    <div id="header">
+        <div class="title">
+            <a href="index.html" class="texto">Gabriel Bittencourt</a>   
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="../public/pages/contato.html">//Contato</a>
+                </li>
+        
+                <li>
+                    <a href="../public/pages/sobre.html">//Sobre</a>
+                </li>
+            </ul>
+        </nav>
+    </div>    
+</header>
 <body>
-    
+    <section id="main">
+        <div class="about"><h1>Descrição</h1></div>
+    </section>
+    <footer id="footer">
+        <div class="linha">
+            Meu Site - Todos os direitos Reservados &copy; - 2024
+        </div>
+    </footer>
 </body>
+
 </html>
