Criadas variaves css e botao para mudança de tema

--- a/public/pages/contato.html
+++ b/public/pages/contato.html
@@ -17,25 +17,22 @@
         </div>
         <nav>
             <ul>
-                <li>
-                    <a href="contato.html">//Contato</a>
-                </li>
-        
-                <li>
-                    <a href="sobre.html">//Sobre</a>
-                </li>
+                <li><a href="contato.html">//Contato</a></li>
+                <li><a href="sobre.html">//Sobre</a></li>
             </ul>
+            <button id="theme-toggle" class="theme-button">Modo claro</button>
         </nav>
     </div>    
 </header>
 <body>
     <section id="main">
-        <div class="about"><h1>Descrição</h1></div>
+        <div class="about"><h1>Contato</h1></div>
     </section>
     <footer id="footer">
         <div class="linha">
             Meu Site - Todos os direitos Reservados &copy; - 2024
         </div>
     </footer>
+    <script src="/src/index.js"></script>
 </body>
 </html>
