--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -17,14 +17,10 @@
         </div>
         <nav>
             <ul>
-                <li>
-                    <a href="contato.html">//Contato</a>
-                </li>
-        
-                <li>
-                    <a href="sobre.html">//Sobre</a>
-                </li>
+                <li><a href="contato.html">//Contato</a></li>
+                <li><a href="sobre.html">//Sobre</a></li>
             </ul>
+            <button id="theme-toggle" class="theme-button">Modo claro</button>
         </nav>
     </div>    
 </header>
@@ -37,5 +33,6 @@
             Meu Site - Todos os direitos Reservados &copy; - 2024
         </div>
     </footer>
+    <script src="/src/index.js"></script>
 </body>
 </html>
