--- a/public/index.html
+++ b/public/index.html
@@ -13,20 +13,16 @@
 <header>
     <div id="header">
         <div class="title">
-            <a href="index.html" class="texto">Gabriel Bittencourt</a>   
+            <a href="index.html" class="texto">Gabriel Bittencourt</a>
         </div>
         <nav>
             <ul>
-                <li>
-                    <a href="../public/pages/contato.html">//Contato</a>
-                </li>
-        
-                <li>
-                    <a href="../public/pages/sobre.html">//Sobre</a>
-                </li>
+                <li><a href="../public/pages/contato.html">//Contato</a></li>
+                <li><a href="../public/pages/sobre.html">//Sobre</a></li>
             </ul>
+            <button id="theme-toggle" class="theme-button">Modo claro</button>
         </nav>
-    </div>    
+    </div>
 </header>
 <body>
     <section id="main">
@@ -37,6 +33,6 @@
             Meu Site - Todos os direitos Reservados &copy; - 2024
         </div>
     </footer>
+    <script src="../src/index.js"></script>
 </body>
-
 </html>
