--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,10 @@
         </div>
     </footer>
     <script src="../src/index.js"></script>
+    <!-- Ion icons CDN -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
 </body>
 </html>
