Background do main

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </header>
 <body>
     <section id="main">
-        <div class="about"><h1>Descrição</h1></div>
+        <div class="about"><h1>Seu site</h1><strong class="dias">em 15 dias</strong></div>
     </section>
     <footer id="footer">
         <div class="linha">
