--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="..\src\style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <header>
     <div id="header">
         <div class="title">
-            <a href="index.html" class="texto">Gabriel Bittencourt</a>
+            <a href="#" class="texto">Gabriel Bittencourt</a>
         </div>
         <nav>
             <ul>
-                <li><a href="../public/pages/contato.html">//Contato</a></li>
-                <li><a href="../public/pages/sobre.html">//Sobre</a></li>
+                <li><a href="public/pages/contato.html">//Contato</a></li>
+                <li><a href="public/pages/sobre.html">//Sobre</a></li>
             </ul>
             <button id="theme-toggle" class="theme-button">Modo claro</button>
         </nav>
@@ -33,7 +33,7 @@
             Meu Site - Todos os direitos Reservados &copy; - 2024
         </div>
     </footer>
-    <script src="../src/index.js"></script>
+    <script src="src/index.js"></script>
     <!-- Ion icons CDN -->
     <script
       type="module"
