--- a/public/pages/contato.html
+++ b/public/pages/contato.html
@@ -13,7 +13,7 @@
 <header>
     <div id="header">
         <div class="title">
-            <a href="/index.html" class="texto">Gabriel Bittencourt</a>   
+            <a href="https://gabrielbittencourt.github.io/Portfolio/" class="texto">Gabriel Bittencourt</a>   
         </div>
         <nav>
             <ul>
