--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -33,6 +33,6 @@
             Meu Site - Todos os direitos Reservados &copy; - 2024
         </div>
     </footer>
-    <script src="/src/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
